[package]
name = "whist"
version = "0.1.0"
authors = ["e-dt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.70"

[profile.release]
debug = true


[lib]
crate-type = ["cdylib", "rlib"]
